# zinc-plus

./: .gitignore  .gitmodules  AGENT_SETUP.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  README.md  REVIEW_ROUND1.md  REVIEW_ROUND2.md  REVIEW_ROUND3.md  SECURITY.md  SHA_ECDSA_UAIRS.md  batched_pcs_table.tex  batched_pcs_table_batch7.tex  batched_pcs_table_i32.tex  batched_pcs_table_i32_batch27.tex  batched_pcs_table_i32_batch3.tex  bench_raw.txt  bench_results.tex  cargo-generate.toml  clippy.toml  deny.toml  encode_table.tex  pcs_table.tex  pcs_table_1row.tex  pcs_table_1row_5pols.tex  pcs_table_1row_i32.tex  pcs_table_1row_i32_3pols.tex  pcs_table_1row_i32_5pols.tex  pcs_table_i32.tex  pcs_table_i32_feb14.tex  pcs_table_i32_with_merkle_opts.tex  pcs_table_i32_zz.tex  pcs_table_i32_zzz.tex  pcs_table_i32_zzz555.tex  r4_table.tex  rustfmt.toml  sha256_snark_steps_table.tex  table.tex  (+1 more)
crypto-primitives/: .all-contributorsrc  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
crypto-primitives-proc-macros/: Cargo.toml
crypto-primitives-proc-macros/src/: infallible_checked_op.rs  lib.rs
crypto-primitives/benches/: boxed_monty_field_benches.rs  const_monty_field_benches.rs  field_ops_bench_common.rs  monty_field_benches.rs
crypto-primitives/proc-macros/: Cargo.toml
crypto-primitives/proc-macros/src/: lib.rs
crypto-primitives/src/: field.rs  helpers.rs  lib.rs  matrix.rs  ring.rs  semiring.rs  traits.rs
crypto-primitives/src/field/: ark_ff_field.rs  ark_ff_fp.rs  crypto_bigint_boxed_monty.rs  crypto_bigint_const_monty.rs  crypto_bigint_helpers.rs  crypto_bigint_monty.rs  f2.rs
crypto-primitives/src/ring/: ark_ff_big_integer.rs  crypto_bigint_int.rs
crypto-primitives/src/semiring/: boolean.rs  crypto_bigint_uint.rs
ecdsa-uair/: Cargo.toml
ecdsa-uair/src/: constraints.rs  lib.rs  witness.rs
piop/: Cargo.toml
piop/benches/: combined_poly_resolver.rs  ideal_check.rs  lookup.rs  multipoint_eval.rs  sumcheck.rs
piop/examples/: lookup_cost_breakdown.rs
piop/src/: batched_shift.rs  bin_multipoint_reducer.rs  combined_poly_resolver.rs  ideal_check.rs  lib.rs  multipoint_eval.rs  multipoint_reducer.rs  projections.rs  random_field_sumcheck.rs  scalar_proj_cache.rs  shift_predicate.rs  shift_sumcheck.rs  sumcheck.rs  test_utils.rs  tests.rs
piop/src/combined_poly_resolver/: folder.rs  structs.rs  utils.rs
piop/src/ideal_check/: batched_ideal_check.rs  combined_poly_builder.rs  structs.rs  utils.rs
piop/src/lookup/: BATCHED_DECOMP_LOGUP.md  batched_decomposition.rs  booleanity.rs  decomposition.rs  gkr_batched_decomposition.rs  gkr_decomposition.rs  gkr_logup.rs  hybrid_gkr.rs  logup.rs  mod.rs  pipeline.rs  structs.rs  tables.rs  utils.rs
piop/src/shift_sumcheck/: predicate.rs  prover.rs  structs.rs  verifier.rs
piop/src/sumcheck/: multi_degree.rs  prover.rs  tests.rs  verifier.rs
piop/src/tests/: test_airs.rs
poly/: Cargo.toml
poly/benches/: binary_vs_ordinary.rs  fix_variables.rs  mle_evaluation.rs  nat_evaluation.rs
poly/src/: dense.rs  lib.rs  mle.rs  univariate.rs  utils.rs  zero_degree.rs
poly/src/mle/: dense.rs
poly/src/univariate/: binary.rs  binary_ref.rs  binary_shared.rs  (+5 more)
primality/: Cargo.toml
primality/src/: lib.rs
protocol/: Cargo.toml
protocol/benches/: e2e.rs  e2e_steps.rs
protocol/src/: fixed_prime.rs  lib.rs  prover.rs  stepped.rs  verifier.rs
sha256-uair/: Cargo.toml
sha256-uair/src/: boundary.rs  constants.rs  lib.rs  no_f2x.rs  underconstrained.rs  witness.rs
snark/: Cargo.toml
snark/benches/: e2e_sha256.rs  sha256_snark.rs  steps_big_linear_pi_folded.rs  steps_chacha20_16x_folded.rs  steps_chacha20_1kb_folded.rs  steps_chacha20_8x_folded.rs  steps_chacha20_folded.rs  steps_chacha20_full_folded.rs  steps_poly1305_folded.rs  steps_sha256_8x.rs  steps_sha256_8x_dual_ring.rs  steps_sha256_8x_ecdsa.rs  steps_sha256_8x_ecdsa_folded.rs  steps_sha256_8x_folded.rs  steps_sha256_8x_uc_folded.rs  steps_sha256_xmss_folded.rs
snark/src/: lib.rs  pipeline.rs  structs.rs
snark/tests/: batched_classic_logup.rs  dual_ring_pipeline.rs  ecdsa_ideal_check.rs  ecdsa_pipeline.rs  folded_pipeline.rs  full_pipeline.rs  ideal_check.rs  public_columns.rs  qx_ideal_check.rs  round_trip.rs
test-uair/: Cargo.toml  UAIRS.md
test-uair/src/: ecdsa.rs  ecdsa_addition.rs  ecdsa_affine.rs  ecdsa_doubling.rs  generate_trace.rs  generate_witness.rs  lib.rs  sha256.rs  sha256_compression.rs  sha_ecdsa.rs
transcript/: Cargo.toml
transcript/src/: field.rs  lib.rs  traits.rs
uair/: Cargo.toml
uair/src/: collect_scalars.rs  constraint_counter.rs  degree_counter.rs  do_nothing_builder.rs  dummy_semiring.rs  ideal.rs  ideal_collector.rs  lib.rs  lookup_types.rs
utils/: Cargo.toml
utils/src/: checked_assign.rs  field.rs  from_ref.rs  inner_product.rs  inner_transparent_field.rs  lib.rs  mul_by_scalar.rs  named.rs  ops_macros.rs  parallel.rs  peak_mem.rs  projectable_to_field.rs  projection_to_field.rs  simd_monty.rs
zip-plus/: Cargo.toml
zip-plus/benches/: batched_zip_plus_benches.rs  r4_config_search.rs  random_field_benches.rs  square_mod_bench.rs  zip_benches.rs  zip_commit_10_f12289.rs  zip_commit_24_f12289.rs  zip_commit_40.rs  zip_commit_40_f12289.rs  zip_commit_5.rs  zip_commit_55_f12289.rs  zip_commit_5_f12289.rs  zip_common.rs  zip_int256_benches.rs  zip_plus_benches.rs  zip_plus_commit_10.rs  zip_plus_commit_100.rs  zip_plus_commit_100_f12289.rs  zip_plus_commit_10_f12289.rs  zip_plus_commit_15.rs  zip_plus_commit_15_f12289.rs  zip_plus_commit_32_f12289.rs  zip_plus_commit_40.rs  zip_plus_commit_40_f12289.rs  zip_plus_commit_55.rs  zip_plus_commit_55_f12289.rs  zip_plus_commit_5_f12289.rs  zip_plus_commit_82.rs  zip_plus_commit_82_f12289.rs  zip_plus_multi_poly_benches.rs
zip-plus/examples/: profile_encode.rs
zip-plus/src/: batched_pcs.rs  code.rs  code_raa.rs  const_helpers.rs  conversion.rs  field.rs  lib.rs  macros.rs  main.rs  merkle.rs  merkle_poc.rs  pcs.rs  pcs_transcript.rs  poly.rs  poly_f.rs  primality.rs  tests.rs  traits.rs  transcript.rs  utils.rs
(+167 files in other folders)
