[workspace]
members = ["zip-plus"]
resolver = "2"
default-members = ["zip-plus"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/zinc-plus"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
crypto-primitives = { git = "https://github.com/NethermindEth/crypto-primitives.git", branch = "main" }
crypto-primitives-proc-macros = { git = "https://github.com/NethermindEth/crypto-primitives.git", branch = "main" }
criterion = "0.7.0"
proptest = "1.8.0"

[workspace.lints.rust]
missing_docs = "allow"  # TODO(alex): replace with "deny" once code has been more-or-less stabilized
unsafe_code = "allow" # TODO(alex): replace with "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
lto = true # Enable Link Time Optimization
codegen-units = 1 # Slower compilation but potentially better optimization
