[workspace]
members = ["piop", "poly", "primality", "test-uair", "transcript", "uair", "utils", "zip-plus"]
resolver = "2"
default-members = ["piop", "poly", "primality", "transcript", "utils", "zip-plus"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/zinc-plus"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
crypto-primitives = { git = "https://github.com/NethermindEth/crypto-primitives.git", branch = "main", features = ["std", "crypto_bigint", "rand"] }

crypto-bigint = { version = "= 0.7.0-rc.9", features = ["zeroize"] }
criterion = "0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
itertools = "0.14"
num-traits = "0.2"
proptest = "1.9.0"
rand = "0.9"
rand_core = "0.9"
rayon = { version = "1.10" }
thiserror = "2.0"
zinc-primality = { path = "primality/" }
zinc-test-uair = { path = "test-uair/" }
zinc-transcript = { path = "transcript/" }
zinc-uair = { path = "uair/" }
zinc-utils = { path = "utils/" }
zinc-poly = { path = "poly/" }

[workspace.lints.rust]
missing_docs = "allow"  # TODO(alex): replace with "deny" once code has been more-or-less stabilized
unsafe_code = "allow" # TODO(alex): replace with "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
lto = true # Enable Link Time Optimization
codegen-units = 1 # Slower compilation but potentially better optimization
