[package]
name = "crypto-primitives"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crypto-primitives-proc-macros = { workspace = true }
num-traits = { version = "0.2", default-features = false }
crypto-bigint = { version = "0.7.0-rc.6", default-features = false, optional = true }
ark-std = { version = "0.5", optional = true, default-features = false }
ark-ff = { version = "0.5", optional = true, default-features = false }
ark-serialize = { version = "0.5", optional = true, default-features = false }
rand = { version = "0.9", default-features = false, optional = true }
pastey = "0.1.1"
serde = { version = "1.0", default-features = false, optional = true }
zeroize = { version = "1.8", default-features = false, optional = true }
num-bigint = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
proptest = { version = "1.8.0", default-features = false, features = ["alloc"] }
rand = { version = "0.9" }

[features]
default = ["std"]
std = ["num-traits/std", "ark-std/std", "ark-ff/std", "serde/std", "rand/std", "zeroize/std"]
ark_std = ["dep:ark-std"]
ark_ff = ["ark_std", "num_bigint", "zeroize", "dep:ark-ff", "dep:ark-serialize"]
serde = ["dep:serde", "crypto-bigint/serde"]
crypto_bigint = ["dep:crypto-bigint"]
num_bigint = ["dep:num-bigint"]
rand = ["dep:rand", "crypto-bigint/rand_core"]
zeroize = ["dep:zeroize"]
