[package]
name = "zinc-piop"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }

derive_more = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }
zinc-transcript = { workspace = true }
zinc-poly = { workspace = true }
zinc-primality = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
crypto-bigint = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["dep:rayon", "zinc-utils/parallel"]

[[bench]]
name = "sumcheck"
harness = false
