[package]
name = "zinc-piop"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[features]
parallel = [
    "dep:rayon",
    "zinc-poly/parallel",
    "zinc-utils/parallel",
    "crypto-primitives/parallel",
]
simd = ["zinc-poly/simd"]

[dependencies]
crypto-primitives = { workspace = true }

derive_more = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
zinc-poly = { workspace = true }
zinc-primality = { workspace = true }
zinc-transcript = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
crypto-bigint = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
zinc-test-uair = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "sumcheck"
harness = false

[[bench]]
name = "ideal_check"
harness = false

[[bench]]
name = "combined_poly_resolver"
harness = false

[[bench]]
name = "multipoint_eval"
harness = false

