[package]
name = "zinc-poly"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
zinc-transcript = { workspace = true }
zinc-utils = { workspace = true }

ark-std = { workspace = true }

itertools = { workspace = true }
thiserror = { workspace = true }
crypto-bigint = { workspace = true }
displaydoc = "0.2"
num-traits = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
crypto-primes = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["dep:rayon"]

[[bench]]
name = "nat_evaluation"
harness = false
