[package]
name = "zinc-poly"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
zinc-transcript = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }

itertools = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
crypto-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["dep:rayon", "zinc-utils/parallel"]
simd = []

[[bench]]
name = "nat_evaluation"
harness = false

[[bench]]
name = "mle_evaluation"
harness = false
