[package]
name = "zinc-poly"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[features]
parallel = ["dep:rayon", "zinc-utils/parallel"]
simd = []

[dependencies]
crypto-bigint = { workspace = true }
crypto-primitives = { workspace = true }
derive_more = { workspace = true }

itertools = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
zinc-transcript = { workspace = true }
zinc-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "nat_evaluation"
harness = false

[[bench]]
name = "mle_evaluation"
harness = false
