[package]
name = "zinc-primality"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
crypto-bigint = { workspace = true }
crypto-primes = { version = "0.7.0-pre.4" }

[lints]
workspace = true

