[package]
name = "zinc-protocol"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crypto-primitives = { workspace = true }
rayon = { workspace = true, optional = true }
itertools = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
zip-plus = { workspace = true }
zinc-piop = { workspace = true }
zinc-poly = { workspace = true }
zinc-primality = { workspace = true }
zinc-transcript = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }

[lib]
bench = false

[dev-dependencies]
criterion = { workspace = true }
crypto-bigint = { workspace = true }
rand = { workspace = true }
zinc-test-uair = { workspace = true }

[lints]
workspace = true


[features]
parallel = ["dep:rayon", "zinc-piop/parallel", "zinc-poly/parallel", "zinc-uair/parallel", "zinc-utils/parallel"]
simd = ["zinc-poly/simd", "zinc-piop/simd", "zip-plus/simd"]
unchecked = []
bench-rate-1-8 = []
bench-rate-1-16 = []

[[bench]]
name = "e2e"
harness = false
