[package]
name = "zinc-sha256-uair"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
zinc-poly = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }

[dev-dependencies]
zinc-uair = { workspace = true }

[lints]
workspace = true
