[package]
name = "zinc-snark"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
crypto-bigint = { workspace = true }
zinc-piop = { path = "../piop" }
zinc-poly = { workspace = true }
zinc-primality = { workspace = true }
zinc-chacha20-uair = { workspace = true }
zinc-ecdsa-uair = { workspace = true }
zinc-poly1305-uair = { workspace = true }
zinc-sha256-uair = { workspace = true }
zinc-transcript = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }
zip-plus = { path = "../zip-plus" }

itertools = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
flate2 = "1.1"
rayon = { workspace = true }
zinc-test-uair = { workspace = true }

[features]
qx-constraints = []
no-f2x = ["zinc-sha256-uair/no-f2x"]
true-ideal = ["zinc-sha256-uair/true-ideal", "zinc-chacha20-uair/true-ideal", "zinc-poly1305-uair/true-ideal"]
boundary = ["zinc-sha256-uair/boundary"]
full-fold = []
parallel = [
    "dep:rayon",
    "zinc-piop/parallel",
    "zinc-poly/parallel",
    "zinc-utils/parallel",
    "zip-plus/parallel",
    "crypto-primitives/parallel",
]
simd = ["zinc-poly/simd", "zip-plus/simd"]
asm = ["zip-plus/asm"]

[lints]
workspace = true

[[bench]]
name = "e2e_sha256"
harness = false

[[bench]]
name = "steps_sha256_8x"
harness = false

[[bench]]
name = "steps_sha256_8x_ecdsa"
harness = false

[[bench]]
name = "steps_sha256_8x_ecdsa_folded"
harness = false

[[bench]]
name = "steps_sha256_8x_folded"
harness = false

[[bench]]
name = "steps_sha256_8x_dual_ring"
harness = false

[[bench]]
name = "steps_sha256_8x_uc_folded"
harness = false

[[bench]]
name = "steps_sha256_xmss_folded"
harness = false

[[bench]]
name = "steps_chacha20_folded"
harness = false

[[bench]]
name = "steps_chacha20_8x_folded"
harness = false

[[bench]]
name = "steps_chacha20_16x_folded"
harness = false

[[bench]]
name = "steps_chacha20_1kb_folded"
harness = false

[[bench]]
name = "steps_chacha20_full_folded"
harness = false

[[bench]]
name = "steps_poly1305_folded"
harness = false

[[bench]]
name = "steps_big_linear_pi_folded"
harness = false
