[package]
name = "zinc-test-uair"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
crypto-bigint = { workspace = true }
crypto-primitives = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
zinc-poly = { workspace = true }
zinc-uair = { workspace = true }
zinc-utils = { workspace = true }

[lints]
workspace = true


