[package]
name = "zinc-transcript"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
zinc-primality = { workspace = true }
zinc-utils = { workspace = true }
rayon = { workspace = true, optional = true }

itertools = { workspace = true }
crypto-bigint = { workspace = true }
blake3 = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["rayon"]

