[package]
name = "zinc-transcript"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
blake3 = { workspace = true }
crypto-bigint = { workspace = true }
crypto-primitives = { workspace = true }

itertools = { workspace = true }
num-traits = { workspace = true }
zinc-primality = { workspace = true }
zinc-utils = { workspace = true }

[lints]
workspace = true

