[package]
name = "zinc-uair"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[features]
parallel = ["dep:rayon", "zinc-utils/parallel"]

[dependencies]
crypto-primitives = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }

thiserror = { workspace = true }
zinc-poly = { workspace = true }
zinc-utils = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
crypto-bigint = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

