[package]
name = "zinc-utils"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
ark-std = {workspace = true}
crypto-primitives = { workspace = true }

crypto-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rayon = {workspace = true, optional = true}

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["dep:rayon"]
