[package]
name = "zinc-utils"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }

crypto-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["dep:rayon"]
simd = ["crypto-primitives/simd128"]
