[package]
name = "zinc-utils"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[features]
parallel = ["dep:rayon"]

[dependencies]

crypto-bigint = { workspace = true }
crypto-primitives = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
