[package]
name = "zip-plus"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
crypto-primitives = { workspace = true }
zinc-poly = { workspace = true }
zinc-primality = { workspace = true }
zinc-transcript = { workspace = true }
zinc-utils = { workspace = true }

ark-ff = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }

itertools = { workspace = true }
thiserror = { workspace = true }
crypto-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
blake3 = { workspace = true }
uninit = "0.6.2"

# Compression libraries, used only to estimate compressed proof sizes
zstd = "0.13"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[features]
parallel = ["dep:rayon", "zinc-utils/parallel", "zinc-poly/parallel", "zinc-transcript/parallel", "ark-ff/parallel", "ark-poly/parallel"]
simd = ["zinc-poly/simd"]
unchecked = []

[[bench]]
name = "zip_benches"
harness = false

[[bench]]
name = "zip_plus_benches"
harness = false
