[package]
name = "zip-plus"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
bench = false

[features]
parallel = [
    "dep:rayon",
    "zinc-utils/parallel",
    "zinc-poly/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
]
simd = ["zinc-poly/simd"]
unchecked = []

[dependencies]

ark-ff = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
blake3 = { workspace = true }
crypto-bigint = { workspace = true }
crypto-primitives = { workspace = true }

itertools = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
uninit = "0.6.2"
zinc-poly = { workspace = true }
zinc-primality = { workspace = true }
zinc-transcript = { workspace = true }
zinc-utils = { workspace = true }

# Compression libraries, used only to estimate compressed proof sizes
zstd = "0.13"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "zip_benches"
harness = false

[[bench]]
name = "zip_plus_benches"
harness = false
